deploy: f81c76d09520f9dbb7fec1a1598e14d033e5e035

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "974145b1",
+   "id": "6a8c5bb8",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89d481f7",
+   "id": "467f1a73",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94b1f0b2",
+   "id": "51073e4d",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0118dffb",
+   "id": "1ec7308a",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "224508b0",
+   "id": "15f11728",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50eed29e",
+   "id": "805be633",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b5c8988d",
+   "id": "f195751c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:44:23.189685Z",
-     "iopub.status.busy": "2025-01-22T11:44:23.189507Z",
-     "iopub.status.idle": "2025-01-22T11:44:27.475981Z",
-     "shell.execute_reply": "2025-01-22T11:44:27.475408Z"
+     "iopub.execute_input": "2025-01-22T12:00:47.637189Z",
+     "iopub.status.busy": "2025-01-22T12:00:47.636735Z",
+     "iopub.status.idle": "2025-01-22T12:00:52.298679Z",
+     "shell.execute_reply": "2025-01-22T12:00:52.298089Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57091965",
+   "id": "5e6d28ad",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ee96c6b",
+   "id": "11d252b3",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb097cbb",
+   "id": "5a669d9c",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28a43304",
+   "id": "34418bce",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e76e613",
+   "id": "b96a57ea",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21d06d2c",
+   "id": "4cfa3c69",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba91883b",
+   "id": "31b606cb",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f619525",
+   "id": "a0f3d5d8",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "76b03aa8",
+   "id": "9617c1b6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:44:27.478381Z",
-     "iopub.status.busy": "2025-01-22T11:44:27.477908Z",
-     "iopub.status.idle": "2025-01-22T11:44:29.423129Z",
-     "shell.execute_reply": "2025-01-22T11:44:29.422519Z"
+     "iopub.execute_input": "2025-01-22T12:00:52.301368Z",
+     "iopub.status.busy": "2025-01-22T12:00:52.300829Z",
+     "iopub.status.idle": "2025-01-22T12:00:54.393042Z",
+     "shell.execute_reply": "2025-01-22T12:00:54.392485Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc99f986",
+   "id": "de210542",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b593fd7f",
+   "id": "1184df8b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:44:29.425049Z",
-     "iopub.status.busy": "2025-01-22T11:44:29.424692Z",
-     "iopub.status.idle": "2025-01-22T11:44:29.428120Z",
-     "shell.execute_reply": "2025-01-22T11:44:29.427555Z"
+     "iopub.execute_input": "2025-01-22T12:00:54.395138Z",
+     "iopub.status.busy": "2025-01-22T12:00:54.394656Z",
+     "iopub.status.idle": "2025-01-22T12:00:54.398561Z",
+     "shell.execute_reply": "2025-01-22T12:00:54.397929Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19c2c4f1",
+   "id": "52ede71b",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bf94b15",
+   "id": "79080794",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df508d4d",
+   "id": "70dbf97e",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "579a2bdc",
+   "id": "cb2e8cec",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "565bc141",
+   "id": "7d0e7087",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:44:29.430091Z",
-     "iopub.status.busy": "2025-01-22T11:44:29.429748Z",
-     "iopub.status.idle": "2025-01-22T11:44:29.472556Z",
-     "shell.execute_reply": "2025-01-22T11:44:29.472023Z"
+     "iopub.execute_input": "2025-01-22T12:00:54.400474Z",
+     "iopub.status.busy": "2025-01-22T12:00:54.400116Z",
+     "iopub.status.idle": "2025-01-22T12:00:54.446499Z",
+     "shell.execute_reply": "2025-01-22T12:00:54.445985Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08b643d6",
+   "id": "ed91cf3d",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e5b9b03c",
+   "id": "26872f79",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:44:29.474522Z",
-     "iopub.status.busy": "2025-01-22T11:44:29.474191Z",
-     "iopub.status.idle": "2025-01-22T11:44:29.539653Z",
-     "shell.execute_reply": "2025-01-22T11:44:29.539066Z"
+     "iopub.execute_input": "2025-01-22T12:00:54.448600Z",
+     "iopub.status.busy": "2025-01-22T12:00:54.448209Z",
+     "iopub.status.idle": "2025-01-22T12:00:54.520749Z",
+     "shell.execute_reply": "2025-01-22T12:00:54.520142Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fd2bc5b",
+   "id": "cfa98f2d",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82f9cb74",
+   "id": "0b35fcac",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b32d1d5f",
+   "id": "4c42c746",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:44:29.541645Z",
-     "iopub.status.busy": "2025-01-22T11:44:29.541227Z",
-     "iopub.status.idle": "2025-01-22T11:44:29.570088Z",
-     "shell.execute_reply": "2025-01-22T11:44:29.569514Z"
+     "iopub.execute_input": "2025-01-22T12:00:54.522810Z",
+     "iopub.status.busy": "2025-01-22T12:00:54.522605Z",
+     "iopub.status.idle": "2025-01-22T12:00:54.555970Z",
+     "shell.execute_reply": "2025-01-22T12:00:54.555437Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dfa4822",
+   "id": "90b9e5a3",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3fcaffb",
+   "id": "cb2dd683",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4a78384",
+   "id": "b1374c82",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30bd85b5",
+   "id": "33fdcde0",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7789f108",
+   "id": "08584a7f",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "05d4e101",
+   "id": "fca584d3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:44:29.572257Z",
-     "iopub.status.busy": "2025-01-22T11:44:29.571897Z",
-     "iopub.status.idle": "2025-01-22T11:44:29.576015Z",
-     "shell.execute_reply": "2025-01-22T11:44:29.575362Z"
+     "iopub.execute_input": "2025-01-22T12:00:54.557971Z",
+     "iopub.status.busy": "2025-01-22T12:00:54.557757Z",
+     "iopub.status.idle": "2025-01-22T12:00:54.562136Z",
+     "shell.execute_reply": "2025-01-22T12:00:54.561637Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8117efa",
+   "id": "78c58f19",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5168b2c6",
+   "id": "3a282176",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:44:29.577834Z",
-     "iopub.status.busy": "2025-01-22T11:44:29.577491Z",
-     "iopub.status.idle": "2025-01-22T11:44:29.580562Z",
-     "shell.execute_reply": "2025-01-22T11:44:29.579907Z"
+     "iopub.execute_input": "2025-01-22T12:00:54.564040Z",
+     "iopub.status.busy": "2025-01-22T12:00:54.563595Z",
+     "iopub.status.idle": "2025-01-22T12:00:54.566539Z",
+     "shell.execute_reply": "2025-01-22T12:00:54.566078Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0be221e5",
+   "id": "98d074d6",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f28b9923",
+   "id": "c362d17c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:44:29.582251Z",
-     "iopub.status.busy": "2025-01-22T11:44:29.581927Z",
-     "iopub.status.idle": "2025-01-22T11:44:32.170549Z",
-     "shell.execute_reply": "2025-01-22T11:44:32.169979Z"
+     "iopub.execute_input": "2025-01-22T12:00:54.568453Z",
+     "iopub.status.busy": "2025-01-22T12:00:54.568119Z",
+     "iopub.status.idle": "2025-01-22T12:00:57.279824Z",
+     "shell.execute_reply": "2025-01-22T12:00:57.279208Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76882e41",
+   "id": "160bf3a1",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be8a0a30",
+   "id": "48d71f42",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49346dcb",
+   "id": "8c1c9c9b",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42a38867",
+   "id": "e631a859",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b151f646",
+   "id": "3d3e818c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:44:32.172731Z",
-     "iopub.status.busy": "2025-01-22T11:44:32.172360Z",
-     "iopub.status.idle": "2025-01-22T11:44:32.176106Z",
-     "shell.execute_reply": "2025-01-22T11:44:32.175605Z"
+     "iopub.execute_input": "2025-01-22T12:00:57.281867Z",
+     "iopub.status.busy": "2025-01-22T12:00:57.281673Z",
+     "iopub.status.idle": "2025-01-22T12:00:57.285646Z",
+     "shell.execute_reply": "2025-01-22T12:00:57.285160Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fdd18bbb380>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fc6c03559e0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb9bf9fd",
+   "id": "299783e5",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0773ed58",
+   "id": "fae04462",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f78cc1ca",
+   "id": "e219a7ec",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f9a0384",
+   "id": "39a2a180",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "71ea50ae",
+   "id": "6e198fdc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:44:32.177929Z",
-     "iopub.status.busy": "2025-01-22T11:44:32.177588Z",
-     "iopub.status.idle": "2025-01-22T11:44:32.180582Z",
-     "shell.execute_reply": "2025-01-22T11:44:32.180026Z"
+     "iopub.execute_input": "2025-01-22T12:00:57.287415Z",
+     "iopub.status.busy": "2025-01-22T12:00:57.287233Z",
+     "iopub.status.idle": "2025-01-22T12:00:57.290298Z",
+     "shell.execute_reply": "2025-01-22T12:00:57.289756Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b0c07d5a",
+   "id": "91217c4a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-22T11:44:32.182391Z",
-     "iopub.status.busy": "2025-01-22T11:44:32.182063Z",
-     "iopub.status.idle": "2025-01-22T11:44:33.243428Z",
-     "shell.execute_reply": "2025-01-22T11:44:33.242871Z"
+     "iopub.execute_input": "2025-01-22T12:00:57.292146Z",
+     "iopub.status.busy": "2025-01-22T12:00:57.291797Z",
+     "iopub.status.idle": "2025-01-22T12:00:58.378487Z",
+     "shell.execute_reply": "2025-01-22T12:00:58.377885Z"
     }
    },
    "outputs": [
